feat(core): wire Viterbi segmentation into VnTokenizer
Completes Phase 4 by loading the bundled dictionaries at runtime and
replacing the tokenization stubs with the real DictLoader ->
ViterbiSegmenter -> VnTokenizer.tokenize() pipeline, including HOST/URL
atom handling and OOV classification.

Also fixes two issues the ship pipeline's security review caught in
this diff before merge: HOST_PATTERN's unbounded regex repetition
could StackOverflowError on adversarial input (Java backtracks
recursively), and ViterbiSegmenter's OOV fallback rescanned to the
next whitespace from every position, an O(n^2) blowup on long
unrecognized runs. Both are covered by new regression tests.